1. Add body.css for the other css styling 2. Add media queries for font custom properties 3. Fix title (h1) wrap probrem by adding a new utility class d-block so it becomes block level

--- a/css/base.css
+++ b/css/base.css
@@ -8,7 +8,8 @@
   --clr-white: 0 0% 100%;
 
   /* font-sizes */
-  --fs-900: 9.375rem;
+  /* clamp(min-value, middle-value, max-value) so it depends viewport */
+  --fs-900: clamp(5rem, 8vw + 1rem, 9.375rem);
   --fs-800: 6.25rem;
   --fs-700: 3.5rem;
   --fs-600: 2rem;
@@ -22,6 +23,25 @@
   --ff-sans-cond: "Barlow Condensed", sans-serif;
   --ff-sans-normal: "Barlow", sans-serif;
 }
+
+@media (min-width: 35em) {
+  :root {
+      --fs-800: 5rem;
+      --fs-700: 2.5rem;
+      --fs-600: 1.5rem;
+      --fs-400: 1rem;
+  }
+}
+
+@media (min-width: 45em) {
+  :root {
+      --fs-800: 6.25rem;
+      --fs-700: 3.5rem;
+      --fs-600: 2rem;
+      --fs-400: 1.125rem;
+  }
+}
+
 
 /* ------------------------------------------------- */
 /* Reset                                             */
